// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > renders with actions correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <div data-slot="alert-actions" class="flex flex-wrap gap-1.5 shrink-0 items-start mt-2.5"><button type="button" data-slot="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-primary)] text-accent-foreground bg-accent hover:bg-accent-hover active:bg-accent-hover disabled:bg-accent aria-disabled:bg-accent outline-accent-focus focus-visible:outline-3 px-2 py-1 text-xs gap-1">
        <!--v-if--><span data-slot="button-label" class="truncate">Action</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with as correctly 1`] = `
"<article data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`Alert > renders with avatar correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start"><span data-slot="alert-avatar" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-accent-soft [--ui-accent:var(--ui-neutral)] size-11 text-[22px] shrink-0"><img src="https://github.com/benjamincanac.png" width="44" height="44" data-slot="avatar-image" class="h-full w-full rounded-[inherit] object-cover"></span>
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start w-48">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with close correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="alert-actions" class="flex flex-wrap gap-1.5 shrink-0 items-center">
    <!--v-if--><button type="button" data-slot="alert-close" aria-label="Close" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] text-accent-muted hover:text-accent-muted-hover active:text-accent-muted-hover disabled:text-accent-muted aria-disabled:text-accent-muted outline-accent-focus focus-visible:outline-3 text-sm gap-1.5 p-0"><span class="iconify i-lucide:x shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
</div>"
`;

exports[`Alert > renders with close slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with closeIcon correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="alert-actions" class="flex flex-wrap gap-1.5 shrink-0 items-center">
    <!--v-if--><button type="button" data-slot="alert-close" aria-label="Close" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-neutral)] text-accent-muted hover:text-accent-muted-hover active:text-accent-muted-hover disabled:text-accent-muted aria-disabled:text-accent-muted outline-accent-focus focus-visible:outline-3 text-sm gap-1.5 p-0"><span class="iconify i-lucide:trash shrink-0 size-5" aria-hidden="true" data-slot="button-leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
</div>"
`;

exports[`Alert > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <div data-slot="alert-description" class="text-sm opacity-90 mt-1">Description</div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <div data-slot="alert-description" class="text-sm opacity-90 mt-1">Description slot</div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with icon correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start"><span class="iconify i-lucide:lightbulb shrink-0 size-5" aria-hidden="true" data-slot="alert-icon"></span>
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with leading slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Leading slot</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with neutral variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-neutral)] text-accent bg-accent-surface ring ring-inset ring-accent-border-muted items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with neutral variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-neutral)] bg-accent-tint text-accent items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with neutral variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-neutral)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with neutral variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-neutral)] bg-accent-tint text-accent ring ring-inset ring-accent-border-soft items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-center"><span class="iconify i-lucide:lightbulb shrink-0 size-5" aria-hidden="true" data-slot="alert-icon"></span>
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <div data-slot="alert-description" class="text-sm opacity-90 mt-1">This is a description</div>
    <!--v-if-->
  </div>
  <div data-slot="alert-actions" class="flex flex-wrap gap-1.5 shrink-0 items-center"><button type="button" data-slot="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-primary)] text-accent-foreground bg-accent hover:bg-accent-hover active:bg-accent-hover disabled:bg-accent aria-disabled:bg-accent outline-accent-focus focus-visible:outline-3 px-2 py-1 text-xs gap-1">
      <!--v-if--><span data-slot="button-label" class="truncate">Action</span>
      <!--v-if-->
    </button>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Alert > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start"><span class="iconify i-lucide:lightbulb shrink-0 size-5" aria-hidden="true" data-slot="alert-icon"></span>
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <div data-slot="alert-description" class="text-sm opacity-90 mt-1">This is a description</div>
    <div data-slot="alert-actions" class="flex flex-wrap gap-1.5 shrink-0 items-start mt-2.5"><button type="button" data-slot="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors [--ui-accent:var(--ui-primary)] text-accent-foreground bg-accent hover:bg-accent-hover active:bg-accent-hover disabled:bg-accent aria-disabled:bg-accent outline-accent-focus focus-visible:outline-3 px-2 py-1 text-xs gap-1">
        <!--v-if--><span data-slot="button-label" class="truncate">Action</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with primary variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] text-accent bg-accent-surface ring ring-inset ring-accent-border-muted items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with primary variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent-tint text-accent items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with primary variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with primary variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent-tint text-accent ring ring-inset ring-accent-border-soft items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-medium">Title slot</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Alert > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="alert" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 [--ui-accent:var(--ui-primary)] bg-accent text-accent-foreground items-start">
  <!--v-if-->
  <div data-slot="alert-wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="alert-title" class="text-sm font-bold">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;
